--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="header" role="banner">
     <div class="photo" title="Anne">
       <!-- using uploaded portrait; replace src if you want another -->
-      <img src="/mnt/data/8BDB4FF9-4708-4420-BB1F-DB5DCDA40BD3.jpeg" alt="Anne portrait">
+      <img src="anne.jpg" alt="Anne portrait">
     </div>
     <div>
       <div class="title">Anne’s atlas</div>
